# libwally-core

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGES.md  CMakeLists.txt  Dockerfile  INSTALL  MANIFEST.in  Makefile  Makefile.am  README.md  SECURITY.md  _CMakeLists.txt  bip39.c  bip39.h  cleanup.sh  configure.ac  mnemonic.c  mnemonic.h  package.json  setup.py  wallycore.cxx  wallycore.go  wordlist.c  wordlist.h
_cmake/: config.h.in  (+4 more)
bindings/python/: CMakeLists.txt  MANIFEST.in  init.py_in  pyproject.toml  setup.py  swig.i
fuzz/: Makefile.am  fuzz_descriptor.c  fuzz_psbt.c  fuzz_psbt_from_bytes.c  fuzz_psbt_musig2.c  fuzz_tx_from_bytes.c
fuzz/corpus/musig_descriptor/: malformed_missing_paren  valid_compressed_keys  valid_xpub_derivation
src/: CMakeLists.txt  Makefile.am  _CMakeLists.txt  address.c  aes.c  anti_exfil.c  anti_klepto.c  base58.c  base58.h  base_64.c  bech32.c  bip32.c  bip32_int.h  bip38.c  bip39.c  bip39.h  bip85.c  blech32.c  ccan_config.h  coins.c  descriptor.c  descriptor_int.h  ecdh.c  elements.c  hex.c  hmac.c  hmac.h  hmac.inl  internal.c  internal.h  map.c  miniscript_decode.c  miniscript_decode.h  miniscript_satisfy.c  mnemonic.c  mnemonic.h  mnemonic.py  musig.c  pbkdf2.c  pbkdf2.h  (+25 more)
src/amalgamation/: combined.c
src/amalgamation/windows_config/: config.h  libsecp256k1-config.h
src/ccan/ccan/base64/: base64.c  base64.h
src/ccan/ccan/compiler/: compiler.h
src/ccan/ccan/crypto/ripemd160/: ripemd160.c  ripemd160.h
src/ccan/ccan/crypto/sha256/: sha256.c  sha256.h  sha256_sse4.c
src/ccan/ccan/tap/: tap.c
src/cpufeatures/: cpu-features.c
src/ctaes/: README.md  ctaes.c
src/ctest/: CMakeLists.txt  _CMakeLists.txt  amalgamation_compile_test.c  psbts.h  satisfy_shim.c  scriptint_shim.c  test_bech32.c  test_blech32.c  test_clear.c  test_coinselection.c  test_descriptor.c  test_elements_tx.c  test_miniscript_decode.c  test_psbt.c  test_psbt_limits.c  test_tx.c
src/dart_wrapper/wallycore/: CHANGELOG.md  pubspec.yaml
src/dart_wrapper/wallycore/example/: wallycore_example.dart
src/dart_wrapper/wallycore/lib/: wallycore.dart
src/dart_wrapper/wallycore/test/: wallycore_test.dart
src/data/: bip341_vectors.json  elip200_vectors.json  elip203_vectors.json  pbkdf2_hmac_sha_vectors.txt  psbt.json  pset.json  schnorr_secp256k1_vectors.json
src/data/bip379/: miniscript_vectors.json  satisfier_golden.json
src/data/bip379/gen_golden/: Cargo.toml
src/data/wordlists/: chinese_simplified.c  chinese_traditional.c  english.c  french.c  italian.c  japanese.c  spanish.c
src/libbase58/: base58.c
src/pyexample/: anti-exfil.py
src/pyexample/liquid/: receive-send.py
src/scrypt/: crypto_scrypt-neon-salsa208.h  crypto_scrypt-neon.c  crypto_scrypt.c  crypto_scrypt_smix.c  crypto_scrypt_smix_neon.c  crypto_scrypt_smix_sse2.c
src/secp256k1/: .travis.yml  Makefile.am  configure.ac
src/secp256k1/build-aux/m4/: ax_jni_include_dir.m4
src/secp256k1/include/: secp256k1_schnorrsig.h
src/secp256k1/src/: bench_schnorrsig.c  group.h  group_impl.h  scalar.h  scalar_impl.h  scalar_low_impl.h  scratch_impl.h  secp256k1.c  testrand.h  testrand_impl.h  tests.c  util.h
src/secp256k1/src/asm/: field_10x26_arm.s
src/swig_go/: address_test.go  bip32_test.go  crypto_test.go  elements_test.go  script_test.go  swig.i  transaction_test.go
src/swig_java/: jni_elements_extra.java_in  jni_extra.java_in  swig.i
src/swig_java/contrib/: Mnemonic.java
src/swig_js/: binding.gyp  example.js
src/swig_js/cordovaplugin/: package.json  plugin.xml  plugin_add.sh
src/swig_js/cordovaplugin/scripts/: add_swift_support.js.HelloCordova
src/swig_js/makewrappers/: wrap.py
src/swig_js/makewrappers/templates/: java.py  js.py  nan.py  swift.py
src/swig_js/test/: test_assets.js  test_base58.js  test_binding.js  test_bip38.js  test_scrypt.js
src/swig_js/windows_config/: config.h  libsecp256k1-config.h
src/swig_python/: python_extra.py_in  swig.i  swig_python_weak.c
src/swig_python/contrib/: address.py  aes.py  bip32.py  coinselection.py  descriptor.py  elements_tx.py  mnemonic.py  psbt.py  reconcile_sigs.py  sha.py  signmessage.py  tx.py
src/test/: Makefile.am  test_address.py  test_aes.py  test_anti_exfil.py  test_anti_klepto.py  test_base58.py  test_base64.py  test_bech32.py  test_bip32.py  test_bip379_vectors.py  test_bip38.py  test_bip39.py  test_bip85.py  test_coinselection.py  test_confidential_addr.py  test_descriptor.py  test_elements.py  test_hash.py  test_hex.py  test_hmac.py  test_map.py  test_mnemonic.py  test_musig.py  test_musig_interop.py  test_musig_vectors.py  test_pbkdf2.py  test_pegin.py  test_pegout.py  test_psbt.py  test_pset.py  test_satisfier_diff.py  test_script.py  test_scrypt.py  test_sha2.py  test_sign.py  test_transaction.py  test_wif.py  test_wordlist.py  util.py
src/test/data/: psbt.json
src/tools/: wordlist_cc.py
src/wasm_package/: .gitignore  .npmignore  README.md  build.sh  const.js  core.js  exports.js  extract-consts.sh  functions.js  index.d.ts  index.js  package-lock.json  package.json  test.js  util.js  webpack.config.js
src/wasm_package/browser/: assert.js
src/wasm_package/libwally_wasm/: wallycore.cjs  wallycore.wasm
src/wasm_package/src/: const.js  core.js  exports.js  functions.js  index.d.ts  index.js
src/wasm_package/src/browser/: assert.js  crypto.js
src/wasm_package/test/: aes.js  assets.js  base58.js  bech32.js  bip32.js  bip39.js  confidential_address.js  hash.js  script.js  scrypt.js  test.js  unblind.js
src/wrap_js/: binding.gyp  example.js  package.json
src/wrap_js/cordovaplugin/: package-lock.json  package.json  plugin.xml  plugin_add.sh
src/wrap_js/makewrappers/: wrap.py
src/wrap_js/makewrappers/templates/: java.py  js.py  nan.py
src/wrap_js/src/: combined.c  combined_ccan2.c
src/wrap_js/test/: test_aes.js  test_assets.js  test_bech32.js  test_binding.js  test_bip32.js  test_bip39.js  test_hash.js  test_script.js  test_unblind.js
src/wrap_js/windows_config/: binding.gyp.elements_tmpl  binding.gyp.tmpl  config.h  libsecp256k1-config.h
(+121 files in other folders)
